<resources>
    <string name="app_name">Where to Eat?</string>
    <string name="hello_list_fragment">List of foods</string>
    <string name="hello_add_fragment">Add new Food</string>
    <string name="hello_info_fragment">Information</string>
    <string name="information">Information</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="foodDescription">Food description</string>
    <string name="restaurant_name">EaTHING</string>
    <string name="restaurant_address">neverbelike street, nr.22</string>
    <string name="restaurant_price">$$$$</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Where to eat?</string>
    <string name="action_search">Search restaurants…</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="actions">Actions</string>
    <string name="filter_price_range">Price Range</string>
    <string name="filter_address">Address</string>
    <string name="filter_state">State</string>
    <string name="filter_country">Country</string>
    <string name="filter_city">City</string>
    <string name="filter_zip_code">Postal Code</string>
    <string name="empty_list">Your query did not provide any results!</string>
    <string name="contactLabel">Contact</string>
    <string name="favoritesLabel">Favorites</string>
    <string name="edit_profile">Edit</string>
    <string name="edit_email">Email</string>
    <string name="edit_name">First and Last name</string>
    <string name="edit_address">Address</string>
    <string name="edit_phone">Phone number</string>
</resources>