<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_marginTop="50dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="25dp" android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:focusable="true" android:backgroundTint="#4C4C4C" android:background="#323232"
                app:cardBackgroundColor="#323232" android:id="@+id/restaurantCard">
            <com.google.android.material.imageview.ShapeableImageView
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    app:srcCompat="@drawable/ic_list" android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="#6A6868" android:id="@+id/restaurant_image" android:scaleType="centerCrop"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:gravity="bottom|center_horizontal"
                        android:layout_marginStart="15dp" android:layout_marginEnd="0dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="15dp">
                    <TextView
                            android:text="@string/restaurant_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/restaurant_name"
                            android:textColor="@color/colorAccent" android:fontFamily="@font/raleway_bold"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="16sp"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeStepGranularity="2sp"
                            android:includeFontPadding="true" android:typeface="normal"
                            android:layout_marginTop="25dp" android:shadowColor="#000000"
                            android:layout_margin="5dp" android:maxHeight="50dp" android:textSize="12sp"
                            android:capitalize="words"/>
                    <TextView
                            android:text="@string/restaurant_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/restaurant_address"
                            android:textColor="#FFFFFF"
                            android:fontFamily="@font/raleway_semibold" android:shadowColor="#000000"
                            android:layout_marginBottom="15dp" android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp" android:layout_marginStart="5dp"/>
                </LinearLayout>
                <TextView
                        android:text="@string/restaurant_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/restaurant_price"
                        android:textColor="#FFFFFF"
                        android:fontFamily="@font/raleway_black" android:shadowColor="#272727" android:shadowDx="5"
                        android:shadowRadius="25" android:textAlignment="gravity" android:textStyle="bold"
                        android:textSize="30sp" android:gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="35dp" android:layout_marginStart="0dp"
                        android:layout_weight="0" android:minWidth="70dp" android:lines="1" android:maxLines="1"
                        android:minLines="1"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal"
            android:layout_marginTop="15dp">
        <androidx.cardview.widget.CardView
                android:layout_width="65dp"
                android:layout_height="65dp" app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="90dp" app:cardElevation="5dp"
                android:foregroundGravity="center_vertical|center_horizontal" android:textAlignment="center"
        >
            <CheckBox
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@drawable/sl_favourite_24dp"
                    app:buttonTint="@android:color/white"
                    android:textAlignment="gravity" android:gravity="center_horizontal|center_vertical"
                    android:layout_gravity="center_horizontal|center_vertical"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
