<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment" android:id="@+id/frameLayout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
        >
            <FrameLayout
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="0dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center_horizontal|center_vertical"
                        android:layout_alignParentTop="false" android:id="@+id/contactImage"
                        android:elevation="10dp" android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp">

                    <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp" app:cardCornerRadius="90dp" app:cardBackgroundColor="#FFBCBC"
                            app:cardElevation="10dp" app:cardMaxElevation="10dp" android:elevation="10dp"
                            android:layout_margin="15dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_profile"
                                app:civ_border_width="0dp"
                                app:civ_border_color="#FF000000"/>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <androidx.cardview.widget.CardView
                        android:id="@+id/contactCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:cardElevation="5dp"
                        android:layout_marginBottom="25dp" android:layout_alignParentTop="false"
                        android:layout_below="@id/contactImage" android:elevation="5dp" app:cardCornerRadius="25dp"
                        android:layout_marginTop="50dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp">
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                    </RelativeLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="center_horizontal|center_vertical"
                            android:layout_margin="25dp">
                        <TextView
                                android:text="@string/contactLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/textView4"
                                android:layout_margin="5dp"
                                android:fontFamily="@font/raleway_black" android:textColor="@color/colorAccent"
                                android:textSize="18sp"/>
                        <TextView
                                android:text="John Doe"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/contactName"
                                android:layout_margin="5dp"
                                android:fontFamily="@font/raleway_bold" android:textSize="18sp"/>
                        <TextView
                                android:text="neverland street, nr.22"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/contactAddress"
                                android:layout_margin="5dp" android:fontFamily="@font/raleway_bold"
                                android:textSize="14sp"/>
                        <TextView
                                android:text="+4075434547"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/contactPhone"
                                android:layout_margin="5dp" android:fontFamily="@font/raleway_bold"
                                android:textSize="14sp"/>
                        <TextView
                                android:text="johndoe@example.com"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/contactMail"
                                android:layout_margin="5dp"
                                android:fontFamily="@font/raleway_bold" android:textSize="14sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center_horizontal"
                        android:elevation="15dp" android:id="@+id/linearLayout3">
                    <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_profile"
                            app:iconGravity="textStart" android:textColor="#FFFFFF" android:textAlignment="center"
                            app:icon="@drawable/ic_baseline_edit_24"
                            android:id="@+id/materialButton" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" app:cornerRadius="15dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:minHeight="250dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_horizontal">
                <TextView
                        android:text="@string/favoritesLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView9"
                        android:fontFamily="@font/raleway_black" android:autoSizeMaxTextSize="24sp"
                        android:autoSizeMinTextSize="22sp" android:autoSizeTextType="uniform"
                        android:textColor="@color/colorAccent" android:textSize="18sp"
                        android:layout_marginEnd="25dp" android:layout_marginStart="35dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"/>
                <com.github.islamkhsh.CardSliderViewPager
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/viewPager"
                        app:cardSlider_smallScaleFactor="0.8"
                        app:cardSlider_otherPagesWidth="24dp"
                        app:cardSlider_pageMargin="8dp"
                        app:cardSlider_indicator="@id/indicator"
                />
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center_horizontal|center_vertical"
                        android:layout_gravity="center_horizontal|center_vertical">
                    <com.github.islamkhsh.CardSliderIndicator
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            app:selectedIndicator="@drawable/indicator_selected"
                            android:id="@+id/indicator"
                            app:indicatorsToShow="3"

                    />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>